Format code to 4space